# cli

./: .clog.toml  .gitignore  Cargo.toml  Cross.toml  README.md  SECURITY.md  build-all.sh  justfile  test-all.sh  update-readme.sh
.cargo/: config.toml
.github/: CONTRIBUTING.md
.github/workflows/: benchmarks.yml  build.yml  release.yml  tests.yml  toc.yml
benches/: parser_bench.rs
ci/: Cargo.toml
ci/src/: main.rs
ci/src/cli/: mod.rs
ci/src/resources/: default_config.toml
ci/tests/: test_cli.rs
cli/: Cargo.toml
cli/src/: lib.rs
codeinput/: Cargo.toml
codeinput/src/: lib.rs
codeinput/src/benches/: mod.rs  owner_resolver_bench.rs  parser_bench.rs  resolver_bench.rs  tag_resolver_bench.rs
codeinput/src/core/: cache.rs  common.rs  display.rs  inline_parser.rs  mod.rs  owner_resolver.rs  parser.rs  resolver.rs  smart_iter.rs  tag_resolver.rs  types.rs
codeinput/src/core/commands/: config.rs  infer_owners.rs  inspect.rs  list_files.rs  list_owners.rs  list_rules.rs  list_tags.rs  mod.rs  parse.rs
codeinput/src/utils/: app_config.rs  error.rs  logger.rs
core/: Cargo.toml
core/src/: cache.rs  commands.rs  common.rs  lib.rs  parse.rs  types.rs
docker/: Dockerfile
src/: lib.rs  main.rs
src/benches/: owner_resolver_bench.rs  parser_bench.rs  resolver_bench.rs  tag_resolver_bench.rs
src/cli/: mod.rs
src/core/: cache.rs  commands.rs  common.rs  display.rs  inline_parser.rs  mod.rs  owner_resolver.rs  parse.rs  parser.rs  resolver.rs  smart_iter.rs  tag_resolver.rs  types.rs
src/core/commands/: config.rs  list_files.rs  list_owners.rs  list_rules.rs  list_tags.rs  mod.rs  parse.rs
src/resources/: default_config.toml
src/utils/: logger.rs  types.rs
tests/: test_cli.rs
utils/: Cargo.toml
utils/src/: app_config.rs
