[package]
name = "codeinput"
version = "0.0.1-beta"
authors = ["Abid Omar <contact@omarabid.com>"]
edition = "2024"
repository = "https://github.com/CodeInputCorp/cli"
readme = "README.md"
license = "MIT"
keywords = ["cli", "codeinput", "git", "tooling"]
description = """
code input cli.
"""

[[bin]]
name = "ci"
path = "src/main.rs"

[[bench]]
name = "parser_bench"
path = "src/benches/parser_bench.rs"
harness = false

[[bench]]
name = "owner_resolver_bench"
path = "src/benches/owner_resolver_bench.rs"
harness = false

[[bench]]
name = "tag_resolver_bench"
path = "src/benches/tag_resolver_bench.rs"
harness = false

[features]
nightly = []
termlog = ["slog-term"]
journald = ["slog-journald"]
syslog = ["slog-syslog"]

[dependencies]
human-panic = "2.0.0"
better-panic = "0.3.0"
log = "0.4.27"
clap_complete = "4.5.50"
rand = "0.9.1"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = {version= "2.0.1", features = ["serde"] }
git2 = { version = "0.20.2" }
sha2 = { version = "0.10.9" }
thiserror = "2.0.12"
backtrace = "0.3.75"
color-backtrace = "0.7.0"
config = "0.15.11"
lazy_static = "1.5.0"
slog = "2.7.0"
slog-syslog = { version="0.13.0", optional = true }
slog-term = {version = "2.9.1", optional = true }
slog-scope = "4.4.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
[target.'cfg(target_os = "linux")'.dependencies]
slog-journald = {version = "2.2.0", optional = true }

[dependencies.clap]
version = "4.5.38"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20"
criterion = { version = "0.6.0", features = ["html_reports"] }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
