[package]
name = "cli"
version = "0.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap_complete = "4.5.50"

[dependencies.clap]
version = "4.5.37"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
