[package]
name = "codeinput"
version = "0.0.1-beta"
authors = ["Abid Omar <contact@omarabid.com>"]
edition = "2021"
repository = "https://github.com/CodeInputCorp/cli"
readme = "../README.md"
license = "MIT"
keywords = ["codeowners", "git", "parsing", "analysis", "tooling"]
description = """
A powerful library for parsing, analyzing, and managing CODEOWNERS files.
Provides advanced querying capabilities, ownership analysis, and tag-based file organization.
"""

[[bench]]
name = "parser_bench"
path = "src/benches/parser_bench.rs"
harness = false

[[bench]]
name = "resolver_bench"
path = "src/benches/resolver_bench.rs"
harness = false

[[bench]]
name = "owner_resolver_bench"
path = "src/benches/owner_resolver_bench.rs"
harness = false

[[bench]]
name = "tag_resolver_bench"
path = "src/benches/tag_resolver_bench.rs"
harness = false

[features]
default = []
nightly = []
termlog = ["slog-term"]
journald = ["slog-journald"]
syslog = ["slog-syslog"]

[dependencies]
rayon = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
git2 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
backtrace = { workspace = true }
color-backtrace = { workspace = true }
config = { workspace = true }
lazy_static = { workspace = true }
slog = { workspace = true }
slog-syslog = { version = "0.13.0", optional = true }
slog-term = { version = "2.9.1", optional = true }
slog-scope = { workspace = true }
slog-async = { workspace = true }
slog-stdlog = { workspace = true }
tabled = { workspace = true }
terminal_size = { workspace = true }
clap = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
slog-journald = { version = "2.2.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }