[package]
name = "core"
version = "0.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "The application core code"
edition = "2024"

[dependencies]
utils = { path = "../utils" }

rand = "0.9.1"
log = "0.4.27"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
bincode = {version= "2.0.1", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
