[package]
name = "core"
version = "0.0.1-beta"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "The application core code"
edition = "2024"

[dependencies]
utils = { path = "../utils" }

rand = "0.9.1"
log = "0.4.27"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bincode = {version= "2.0.1", features = ["serde"] }
git2 = { version = "0.20.2" }
sha2 = { version = "0.10.9" }

[dev-dependencies]
tempfile = "3.8"
